--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                 <li><a style="font-size: 1.3em;" href="#jump5.2">阿左美冷蔵 金崎本店 蔵元秘伝みつ<a></li>
             </ul>
                 <li><a style="font-size: 1.8em;" href="#jumpm">６.まとめ</a></li>
+            <ul>
+                <li><a style="font-size: 1.3em;" href="#jump6.1">要点・注意点<a></li>
+                <li><a style="font-size: 1.3em;" href="#jump6.2">感想・おすすめ<a></li>
+            </ul>
         </div>
     </main>
     <div class="texxt">
@@ -295,6 +299,17 @@
     </div>    
 
     <h2 id="jumpm">６.まとめ</h2>
-    </div>
+    <h3 id="jump6.1"><p>（１）要点・注意点</h3></p>
+    <p>今回のグルメサイトでは埼玉県のグルメについて説明していきました。
+       営業時間があまり長くない店舗やかなりお値段が張ってしまう場合もあるので青色になっている文字から営業時間や
+       アクセスについて調べることをおすすめします。特に秩父などの田舎にある店舗は電車の数も限られてくるのでご注意ください。
+    </p>
+    <h3 id="jump6.2"><p>（２）感想・おすすめ</h3></p>
+    <p>今回のサイト作成に当たって、実際にいくつかの店舗へと足を運びました。そのついでに秩父などへ旅行
+       にいったのですが、秩父の自然は写真で見るよりも遥かに迫力があり、地方特有の雰囲気が広がっており感動しました。
+       この経験から、直接足を運ぶことの大切さを学ぶと同時に自分たちはまだまだ埼玉県について知らないんだということを
+       思い知らされました。今回は埼玉のグルメについての紹介でしたが今度は観光スポットやお土産についてのサイトも作成
+       していきたいです。
+    </p>
 </body>
 </html>
