--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div style="text-align: center">
-    <h1>埼玉県グルメマップ</h1></div>
+    <h1></h1><span class="titlecolor">埼玉県グルメマップ</span></h1></div>
     <header>
         <div style="text-align: center">
         <div id="logo">
