--- a/index.html
+++ b/index.html
@@ -24,11 +24,23 @@
 </head>
 <body>
     <div style="text-align: center">
-    <h1></h1><span class="titlecolor">埼玉県グルメマップ</span></h1></div>
+    <h1>埼玉県グルメマップ</h1></div>
     <header>
-        <div style="text-align: center">
-        <div id="logo">
-            <img src="kawagoe.webp"></div>
+        <div class="logo">
+            <div class="scroll-infinity__wrap">
+              <ul class="scroll-infinity__list scroll-infinity__list--left">
+                <li class="ロゴ１"><img src="kawagoe.webp" /></li>                        
+                <li class="ロゴ２"><img src="kawagoe.webp" /></li>
+                <li class="ロゴ３"><img src="kawagoe.webp" /></li>
+                <li class="ロゴ４"><img src="kawagoe.webp" /></li>
+              </ul>
+              <ul class="scroll-infinity__list scroll-infinity__list--left">
+                <li class="ロゴ１"><img src="kawagoe.webp" /></li>                        
+                <li class="ロゴ２"><img src="kawagoe.webp" /></li>
+                <li class="ロゴ３"><img src="kawagoe.webp" /></li>
+                <li class="ロゴ４"><img src="kawagoe.webp" /></li>
+              </ul>
+            </div>
         </div>
     </header>
 
@@ -81,6 +93,7 @@
             </ul>
         </div>
     </main>
+    
     <div class="texxt">
     <h2 id="jump1">１.和食</h2>
     <h3 id="jump1.1"><p>（１）<a href="https://tabelog.com/saitama/A1104/A110401/11009882/dtlmenu/">久良一 こうのす川幅うどん</a></p> </h3><!--久良一（くらいち）-->
@@ -145,7 +158,8 @@
             loading="lazy" 
             referrerpolicy="no-referrer-when-downgrade">
         </iframe>
-    </div>    
+    </div>  
+
     <h3 id="jump2.2"><p>（２）<a href="https://tabelog.com/saitama/A1103/A110302/11035644/">えいすけ ビーフカツレツ定食</h3></a></p>
     <p>昼・夜はいつも行列ができている人気の洋食店です。こちらでは、ビーフカツレツやハンバーグ、オムライスなどの、「ザ・洋食店」というメニューがズラリと並んでいます。<br>
     このお店の名物であり、圧倒的な人気を誇るのが、「ビーフカツレツ定食」です。<br>
