--- a/index.html
+++ b/index.html
@@ -117,16 +117,17 @@
         </iframe>
     </div>
     
-    <h3 id="jump1.2"><p>（２）<a href="https://tabelog.com/saitama/A1107/A110701/11002483/">わらじカツ丼</h3></a></p>
-    <p>小鹿野町の「安田屋」は、カツの枚数が選べるグルメ丼を提供しているお店で、レトロな雰囲気を醸し出しています。<br>
-        埼玉県秩父地方の名物「わらじカツ丼」は、その名の通り履物のわらじのような大きさのトンカツが特徴的な郷土料理です。<br>
-        丼からはみ出すほどの巨大なカツは、薄く伸ばされたロース肉を使用し、サクサクの衣で揚げられています。甘辛い醤油ベースのタレをくぐらせたカツは、ご飯との相性が抜群で、ボリューム満点の一品となっています。
+    <h3 id="jump1.2"><p>（２）<a href="https://tabelog.com/saitama/A1107/A110701/11044527/">秩父わらじかつ亭 わらじカツ丼</h3></a></p>
+    <p>埼玉県秩父地方の名物「わらじカツ丼」は、その名の通り履物のわらじのような大きさのトンカツが特徴的な郷土料理です。<br>
+       丼からはみ出すほどの巨大なカツは、薄く伸ばされたロース肉を使用し、サクサクの衣で揚げられています。甘辛い醤油ベースのタレをくぐらせたカツは、ご飯との相性が抜群で、ボリューム満点の一品となっています。<br>
+       秩父市にはわらじカツ丼を提供しているお店が数多くあります。今回紹介するのは西武秩父駅の「秩父わらじかつ亭」です。このお店のわらじカツ丼はかつ一枚一枚がとても大きく、程よい薄さで衣もサクサク、キャベツやお米とのバランスも良い、大満足な一品となっています。<br>
+       また、「祭りの湯」と併設されているフードコートの中にあるため、一緒に温泉も楽しむことができます。
     </p>
     <div class="slider">
         <img src="waraji1.jpeg" alt="">
         <img src="waraji2.jpeg" alt="">
+        <img src="norikatu.jpg" alt="">
         <img src="warajikatsutei.jpeg" alt="">
-        <img src="katukanban.jpg" alt="">
     </div>
     <div class="map-container">
         <iframe 
@@ -226,13 +227,13 @@
     <h2 id="jump4">４.中華料理</h2>
     <h3 id="jump4.1"><p>（１）<a href="https://tabelog.com/saitama/A1102/A110202/11003155/">大味</h3></a></p>
     <p>埼玉県蕨市にある大人気中華料理店です。席数が少ないので並ぶことが多いみたいです。<br>
-       このお店は人気テレビ番組にも紹介されたことがあり、とにかく量が多いことが話題になりました。このお店の看板料理「海老チャーハン」はYahoo!ニュースで「埼玉県の炒飯名店ランキング」大味が１位に選ばれました。
+       このお店は人気テレビ番組にも紹介されたことがあり、とにかく量が多く、値段が安いことが話題になりました。このお店の看板料理「海老チャーハン」はYahoo!ニュースで「埼玉県の炒飯名店ランキング」大味が１位に選ばれました。
        さらに、店主はホテルニューオータニで修行をしていたということなので、美味しいことは間違いないです。
     </p>
     <div class="slider">
-        <img src="taimicha.jpg" alt="">
-        <img src="taimishu.jpg" alt="">
-        <img src="taimiebi.jpg" alt="">
+        <img src="ebicha.jpeg" alt="">
+        <img src="ebihikaku.jpeg" alt="">
+        <img src="ebicha.jpeg" alt="">
         <img src="taimisoto.jpg" alt="">
     </div>
     <div class="map-container">
@@ -275,8 +276,8 @@
         別添えのカラメルを加えると、ガラッと味が変わって、一度で二通りの味を楽しむことができます。 
     </p>
     <div class="slider">
-        <img src="cocopurin.jpg" alt="">
-        <img src="syuuu.jpg" alt="">
+        <img src="purin1.jpeg" alt="">
+        <img src="karameru.jpeg" alt="">
         <img src="cocohata.webp" alt="">
         <img src="cocosoto.webp" alt="">
     </div>
