--- a/index.html
+++ b/index.html
@@ -182,6 +182,25 @@
         </iframe>
     </div>    
 
+    <p><h3>実際に行ってみた感想</h3></p>
+    <p>
+       えいすけには19時頃に行かせていただきました。<br>
+       このお店の特徴は夫婦２人で運営しているということです。そのため、お店では出来立ての手作りのをいただく
+       ことができ、お店と地域住民の温かいやりとりをみることができます。しかし、２人で営んでいる分提供スピードは
+       あまり早くなく、今回は提供まで一時間ほどかかりました。
+       <div style="text-align: center">
+        <div id="logo">
+            <img src="eisukemenu.jpeg"></div>
+        </div>
+        ですので、待つことが苦手の方には向いていないかもしれません。ですが、その分味は絶品となっています。<br>
+        ビーフカツレツ定食はとてもまろやかで柔らかく、箸で挟んだだけでもちぎれてしまいそうなほどです。あまり脂っこく
+        なく、口当たりはステーキに似たものを感じました。ビーフカツレツ定食は2000円ほどで少し高めな値段
+        ですがそれに見合った、とても美味しい料理でした。ビーフカツレツ定食の他に安めのメニューもあり、そちらも
+        クオリティーが高いので高いと感じる方もぜひ足を運んでみてください。
+
+        
+    </p>
+
     <h2 id="jump3">３.韓国料理</h2>
     <h3 id="jump3.1"><p>（１）<a href="https://tabelog.com/saitama/A1102/A110203/11053585/">韓国式チキン プルタッチキン</a></p> </h3>
     <p>新越谷駅西口から徒歩2分のところにある韓国料理店です。このお店ではサムギョプサルや韓国式チキンなど、本場の味を再現した韓国料理を楽しむことができます。<br>
@@ -246,6 +265,26 @@
         </iframe>
     </div>    
 
+    <p><h3>実際に行ってみた感想</h3></p>
+    <p>
+       大味には18時頃に行かせていただきました。<br>
+       前述した通りこのお店は量が多いことが売りとなっています。そのため、お店ではタッパーを持参して残りを
+       お持ち帰りすることができるようになっています。そのため今回は私たちもタッパーを持参し、店舗に赴きました。
+       今回は海老チャーハンとエビチリを注文したのですが、あまりの大きさに驚いてしまいました。
+       <div style="text-align: center">
+        <div id="logo">
+            <img src="chahan.jpeg"></div>
+        </div>
+        曰く、このチャーハンはコンビニのおにぎり7～8個分らしく、取り皿で分けつつ食べるもののようですが
+        私たちは一人一皿で頼んでしまいました。それに加えてワカメのスープもセットでついてくるのでとてもボリュームがあり
+        ました。しかし、量だけではなく、味もとてもクオリティーの高いものでした。
+        チャーハンはパラパラで脂っこくないのでサクサク食べ進めることができ、海老はとてもプリプリでかつ、どっさりと
+        のっているので満足するまで食事を堪能することができました。<br>
+        結局一部タッパーで持ち帰ることとなってしまいましたが2日目でも味は落ちることなく、とても美味しかったです。
+        ですがやはり、量が多いので胃袋の自信がない方はタッパーを持参するか半チャーハンなどにして量を減らす
+        ことをおすすめします。
+    </p>
+
     <h3 id="jump4.2"><p>（２）<a href="https://tabelog.com/saitama/A1101/A110101/11057297/">火鍋亭</h3></a></p>
     <p>全国でもわずか６軒しかない、天然氷の蔵元が営む専門店です。
        昭和風な建物と、開放感あふれる庭園が特徴的です。<br>
@@ -303,6 +342,19 @@
         <img src="asaminaka.jpeg" alt="">
         <img src="asamisoto.jpeg" alt="">
     </div>
+
+    <p><h3>実際に行ってみた感想</h3></p>
+    <p>
+       開店時間である10:00を目安に伺いました。<br>
+       電車の都合もあり、開店より少し早くに着いてしまったのですが開店より少し早めに店内に入れていただきました。
+       店内に入った後もわざわざ暖房の効いた席に案内していただいたり、かき氷の食べ方やおすすめについて
+       も丁寧に説明していただき、とても親切な接客だったと印象に残りました。<br>
+       注文から数分後、注文が届きました。今回は阿佐美冷蔵秘伝の「蔵元秘伝蜜」をかけていただきました。
+       普段お祭りで食べるようなかき氷よりもずっと氷がふわふわしていて、蜜もちょうど良い甘さでサクサク食べ進めることができ、これを食べれただけでも
+       秩父に来て良かったと思えるほど。それに加え、食後は無料で足湯に入ることができ、かき氷で冷えた体を温めることができるサービスもついています。
+       冬に訪れたのでかき氷は体が冷えてしまうと考えていましたが、結果としては大満足の体験ができました！
+
+    </p>
     <div class="map-container">
         <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d806.0916605507907!2d139.11189969999998!3d36.0845495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601ec604d41075b3%3A0x73b3c85f208d5d62!2z6Zi_5bem576O5Ya36JS1IOmHkeW0juacrOW6lw!5e0!3m2!1sja!2sjp!4v1733367132002!5m2!1sja!2sjp" 
