--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
        ことができ、お店と地域住民の温かいやりとりをみることができます。しかし、２人で営んでいる分提供スピードは
        あまり早くなく、今回は提供まで一時間ほどかかりました。
        <div style="text-align: center">
-        <div id="logo">
+        <div id="eisuke">
             <img src="eisukemenu.jpeg"></div>
         </div>
         ですので、待つことが苦手の方には向いていないかもしれません。ですが、その分味は絶品となっています。<br>
@@ -272,7 +272,7 @@
        お持ち帰りすることができるようになっています。そのため今回は私たちもタッパーを持参し、店舗に赴きました。
        今回は海老チャーハンとエビチリを注文したのですが、あまりの大きさに驚いてしまいました。
        <div style="text-align: center">
-        <div id="logo">
+        <div id="chahan">
             <img src="chahan.jpeg"></div>
         </div>
         曰く、このチャーハンはコンビニのおにぎり7～8個分らしく、取り皿で分けつつ食べるもののようですが
