--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
        あまり早くなく、今回は提供まで一時間ほどかかりました。
        <div style="text-align: center">
         <div id="eisuke">
-            <img src="eisukemenu.jpeg"></div>
+            <img src="eisukemenu.jpg"></div>
         </div>
         ですので、待つことが苦手の方には向いていないかもしれません。ですが、その分味は絶品となっています。<br>
         ビーフカツレツ定食はとてもまろやかで柔らかく、箸で挟んだだけでもちぎれてしまいそうなほどです。あまり脂っこく
