--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
        今回は海老チャーハンとエビチリを注文したのですが、あまりの大きさに驚いてしまいました。
        <div style="text-align: center">
         <div id="chahan">
-            <img src="chahan.jpeg"></div>
+            <img src="ebihikaku.jpeg"></div>
         </div>
         曰く、このチャーハンはコンビニのおにぎり7～8個分らしく、取り皿で分けつつ食べるもののようですが
         私たちは一人一皿で頼んでしまいました。それに加えてワカメのスープもセットでついてくるのでとてもボリュームがあり
