--- a/index.html
+++ b/index.html
@@ -188,17 +188,14 @@
        このお店の特徴は夫婦２人で運営しているということです。そのため、お店では出来立ての手作りのをいただく
        ことができ、お店と地域住民の温かいやりとりをみることができます。しかし、２人で営んでいる分提供スピードは
        あまり早くなく、今回は提供まで一時間ほどかかりました。
-       <div style="text-align: center">
-        <div id="eisuke">
-            <img src="eisukemenu.jpg"></div>
+        <div class="eisuke">
+            <img src="eisukemenu.jpg" alt=""></div>
         </div>
         ですので、待つことが苦手の方には向いていないかもしれません。ですが、その分味は絶品となっています。<br>
         ビーフカツレツ定食はとてもまろやかで柔らかく、箸で挟んだだけでもちぎれてしまいそうなほどです。あまり脂っこく
         なく、口当たりはステーキに似たものを感じました。ビーフカツレツ定食は2000円ほどで少し高めな値段
         ですがそれに見合った、とても美味しい料理でした。ビーフカツレツ定食の他に安めのメニューもあり、そちらも
         クオリティーが高いので高いと感じる方もぜひ足を運んでみてください。
-
-        
     </p>
 
     <h2 id="jump3">３.韓国料理</h2>
@@ -271,9 +268,8 @@
        前述した通りこのお店は量が多いことが売りとなっています。そのため、お店ではタッパーを持参して残りを
        お持ち帰りすることができるようになっています。そのため今回は私たちもタッパーを持参し、店舗に赴きました。
        今回は海老チャーハンとエビチリを注文したのですが、あまりの大きさに驚いてしまいました。
-       <div style="text-align: center">
-        <div id="chahan">
-            <img src="ebihikaku.jpeg"></div>
+        <div class="chahan">
+            <img src="ebihikaku.jpeg" alt=""></div>
         </div>
         曰く、このチャーハンはコンビニのおにぎり7～8個分らしく、取り皿で分けつつ食べるもののようですが
         私たちは一人一皿で頼んでしまいました。それに加えてワカメのスープもセットでついてくるのでとてもボリュームがあり
