--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@
     </p>
 
     <h3 id="jump4.2"><p>（２）<a href="https://tabelog.com/saitama/A1101/A110101/11057297/">火鍋亭</h3></a></p>
-    <p>全国でもわずか６軒しかない、天然氷の蔵元が営む専門店です。
-       昭和風な建物と、開放感あふれる庭園が特徴的です。<br>
-       数あるかき氷メニューの中でも、一番の人気メニューは「蔵元秘伝みつ」です。
-       和三盆をじっくり煮詰めて作った秘伝のみつは上品な味わいで、天然氷本来の味を楽しむことができます。
+    <p>
+        火鍋亭は大宮駅からら徒歩5分の場所にある人気中華料理店であり、ラムと牛肉コースはその中でも１番人気のメニューです。
+        唐辛子や花椒などの中国から直輸入した様々な漢方を使い、秘伝のレシピで仕上げた薬膳火鍋は絶品です。 また、高級感のある店内にはロールカーテンで仕切りを設けたデーブル席や個室も完備しており、デートや 女子会にもよく使われているようです。
+        少しお値段は張ってしまいますが大宮駅周辺で本場の中華を食べたい方には 特におすすめです。
     </p>
     <div class="slider">
         <img src="hinabeniku.jpg" alt="">
