--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
     <div style="text-align: center">
     <h1>埼玉県グルメマップ</h1></div>
     <header>
-        <div class="logo">
+        <div class="loggo">
             <div class="scroll-infinity__wrap">
               <ul class="scroll-infinity__list scroll-infinity__list--left">
-                <li class="ロゴ１"><img src="kawagoe.webp" /></li>                        
-                <li class="ロゴ２"><img src="kawagoe.webp" /></li>
-                <li class="ロゴ３"><img src="kawagoe.webp" /></li>
-                <li class="ロゴ４"><img src="kawagoe.webp" /></li>
+                <li class="logo"><img src="kawagoe.webp" /></li>                        
+                <li class="logo"><img src="kawagoe.webp" /></li>
+                <li class="logo"><img src="kawagoe.webp" /></li>
+                <li class="logo"><img src="kawagoe.webp" /></li>
               </ul>
               <ul class="scroll-infinity__list scroll-infinity__list--left">
-                <li class="ロゴ１"><img src="kawagoe.webp" /></li>                        
-                <li class="ロゴ２"><img src="kawagoe.webp" /></li>
-                <li class="ロゴ３"><img src="kawagoe.webp" /></li>
-                <li class="ロゴ４"><img src="kawagoe.webp" /></li>
+                <li class="logo"><img src="kawagoe.webp" /></li>                        
+                <li class="logo"><img src="kawagoe.webp" /></li>
+                <li class="logo"><img src="kawagoe.webp" /></li>
+                <li class="logo"><img src="kawagoe.webp" /></li>
               </ul>
             </div>
         </div>
@@ -269,8 +269,7 @@
     </p>
 
     <h3 id="jump4.2"><p>（２）<a href="https://tabelog.com/saitama/A1101/A110101/11057297/">火鍋亭</h3></a></p>
-    <p>
-        火鍋亭は大宮駅からら徒歩5分の場所にある人気中華料理店であり、ラムと牛肉コースはその中でも１番人気のメニューです。
+    <p>火鍋亭は大宮駅からら徒歩5分の場所にある人気中華料理店であり、ラムと牛肉コースはその中でも１番人気のメニューです。
         唐辛子や花椒などの中国から直輸入した様々な漢方を使い、秘伝のレシピで仕上げた薬膳火鍋は絶品です。 また、高級感のある店内にはロールカーテンで仕切りを設けたデーブル席や個室も完備しており、デートや 女子会にもよく使われているようです。
         少しお値段は張ってしまいますが大宮駅周辺で本場の中華を食べたい方には 特におすすめです。
     </p>
