--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
     <div style="text-align: center">
     <h1>埼玉県グルメマップ</h1></div>
     <header>
-        <div class="loggo">
+        <div class="scroll-infinity">
             <div class="scroll-infinity__wrap">
-              <ul class="scroll-infinity__list scroll-infinity__list--left">
-                <li class="logo"><img src="kawagoe.webp" /></li>                        
-                <li class="logo"><img src="kawagoe.webp" /></li>
-                <li class="logo"><img src="kawagoe.webp" /></li>
-                <li class="logo"><img src="kawagoe.webp" /></li>
-              </ul>
-              <ul class="scroll-infinity__list scroll-infinity__list--left">
-                <li class="logo"><img src="kawagoe.webp" /></li>                        
-                <li class="logo"><img src="kawagoe.webp" /></li>
-                <li class="logo"><img src="kawagoe.webp" /></li>
-                <li class="logo"><img src="kawagoe.webp" /></li>
-              </ul>
+                <ul class="scroll-infinity__list scroll-infinity__list--left">
+                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>                        
+                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>
+                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>
+                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>
+                </ul>
+                <ul class="scroll-infinity__list scroll-infinity__list--left">
+                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>                        
+                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>
+                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>
+                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>
+                </ul>
             </div>
         </div>
     </header>
