--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="scroll-infinity__wrap">
                 <ul class="scroll-infinity__list scroll-infinity__list--left">
                   <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>                        
-                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>
+                  <li class="scroll-infinity__item"><img src="yamayama.jpeg" /></li>
                   <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>
                   <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>
                 </ul>
