--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     <div class="slider">
         <img src="ebicha.jpeg" alt="">
         <img src="ebihikaku.jpeg" alt="">
-        <img src="ebicha.jpeg" alt="">
+        <img src="tensindon.jpeg" alt="">
         <img src="taimisoto.jpg" alt="">
     </div>
     <div class="map-container">
