--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
         <div class="scroll-infinity">
             <div class="scroll-infinity__wrap">
                 <ul class="scroll-infinity__list scroll-infinity__list--left">
-                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>                        
+                  <li class="scroll-infinity__item"><img src="soka.jpg" /></li>                        
                   <li class="scroll-infinity__item"><img src="yamayama.jpeg" /></li>
                   <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>
-                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>
+                  <li class="scroll-infinity__item"><img src="laketown.webp" /></li>
                 </ul>
                 <ul class="scroll-infinity__list scroll-infinity__list--left">
-                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>                        
-                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>
-                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>
-                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>
+                  <li class="scroll-infinity__item"><img src="titibu.jpg" /></li>                        
+                  <li class="scroll-infinity__item"><img src="tamaari.jpg" /></li>
+                  <li class="scroll-infinity__item"><img src="urawa.webp" /></li>
+                  <li class="scroll-infinity__item"><img src="kasukabe.jpg" /></li>
                 </ul>
             </div>
         </div>
@@ -190,6 +190,10 @@
        ビーフカツレツ定食はとてもまろやかで柔らかく、箸で挟んだだけでもちぎれてしまいそうなほどです。あまり脂っこくなく、口当たりはステーキに似たものを感じました。ビーフカツレツ定食は2000円ほどで少し高めな値段ですがそれに見合った、とても美味しい料理でした。ビーフカツレツ定食の他に安めのメニューもあり、そちらもクオリティーが高いので高いと感じる方もぜひ足を運んでみてください。
     </p>
 
+    <div class="kansou">
+        <img src="onegai.jpeg" alt="お願い">
+    </div>
+
     <h2 id="jump3">３.韓国料理</h2>
     <h3 id="jump3.1"><p>（１）<a href="https://tabelog.com/saitama/A1102/A110203/11053585/">韓国式チキン プルタッチキン</a></p> </h3>
     <p>新越谷駅西口から徒歩2分のところにある韓国料理店です。このお店ではサムギョプサルや韓国式チキンなど、本場の味を再現した韓国料理を楽しむことができます。<br>
@@ -241,7 +245,7 @@
     <div class="slider">
         <img src="ebicha.jpeg" alt="">
         <img src="ebihikaku.jpeg" alt="">
-        <img src="tensindon.jpeg" alt="">
+        <img src="ebicha.jpeg" alt="">
         <img src="taimisoto.jpg" alt="">
     </div>
     <div class="map-container">
@@ -267,6 +271,10 @@
         ですがやはり、量が多いので胃袋の自信がない方はタッパーを持参するか半チャーハンなどにして量を減らす
         ことをおすすめします。
     </p>
+
+    <div class="kansou">
+        <img src="taiminedan.jpeg" alt="値段表">
+    </div>
 
     <h3 id="jump4.2"><p>（２）<a href="https://tabelog.com/saitama/A1101/A110101/11057297/">火鍋亭</h3></a></p>
     <p>火鍋亭は大宮駅からら徒歩5分の場所にある人気中華料理店であり、ラムと牛肉コースはその中でも１番人気のメニューです。
@@ -312,6 +320,19 @@
         </iframe>
     </div>    
 
+    <p><h3>実際に行ってみた感想</h3></p>
+    <p>
+        放課後、17時頃に伺いました。平日だったこともあり、とてもスムーズに購入することができました。また、店員さんも笑顔で接客してくださり、とても気分が良かったです！<br>
+        今回、購入した商品は看板メニューである「大宮Cocoプリン」です！大きさは手のひらサイズで、別添えでカラメルがついてきました。<br>
+        なめらかな食感に、程よい甘さかつ、卵が濃厚でとても美味しかったです！また、別添えのカラメルをかけることによってまた違った味も楽しめます！<br>
+        駅からも徒歩で行くことができるので、大宮に行く際はぜひ立ち寄ってみてください！
+    </p>
+
+    <div class="kansou">
+        <img src="Cocogaikan.jpeg" alt="お店外観">
+        <img src="reizouko.jpeg" alt="冷蔵庫">
+    </div>
+
     <h3 id="jump5.2"><p>（２）<a href="https://tabelog.com/saitama/A1107/A110704/11000259/">阿左美冷蔵 金崎本店 蔵元秘伝みつ</h3></a></p>
     <p>全国でもわずか６軒しかない、天然氷の蔵元が営む専門店です。
        昭和風な建物と、開放感あふれる庭園が特徴的です。<br>
@@ -325,18 +346,6 @@
         <img src="asamisoto.jpeg" alt="">
     </div>
 
-    <p><h3>実際に行ってみた感想</h3></p>
-    <p>
-       開店時間である10:00を目安に伺いました。<br>
-       電車の都合もあり、開店より少し早くに着いてしまったのですが開店より少し早めに店内に入れていただきました。
-       店内に入った後もわざわざ暖房の効いた席に案内していただいたり、かき氷の食べ方やおすすめについて
-       も丁寧に説明していただき、とても親切な接客だったと印象に残りました。<br>
-       注文から数分後、注文が届きました。今回は阿佐美冷蔵秘伝の「蔵元秘伝蜜」をかけていただきました。
-       普段お祭りで食べるようなかき氷よりもずっと氷がふわふわしていて、蜜もちょうど良い甘さでサクサク食べ進めることができ、これを食べれただけでも
-       秩父に来て良かったと思えるほど。それに加え、食後は無料で足湯に入ることができ、かき氷で冷えた体を温めることができるサービスもついています。
-       冬に訪れたのでかき氷は体が冷えてしまうと考えていましたが、結果としては大満足の体験ができました！
-
-    </p>
     <div class="map-container">
         <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d806.0916605507907!2d139.11189969999998!3d36.0845495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601ec604d41075b3%3A0x73b3c85f208d5d62!2z6Zi_5bem576O5Ya36JS1IOmHkeW0juacrOW6lw!5e0!3m2!1sja!2sjp!4v1733367132002!5m2!1sja!2sjp" 
@@ -345,7 +354,23 @@
             loading="lazy" 
             referrerpolicy="no-referrer-when-downgrade">
         </iframe>
-    </div>    
+    </div>   
+    <p><h3>実際に行ってみた感想</h3></p>
+    <p>
+       開店時間である10:00を目安に伺いました。<br>
+       電車の都合もあり、開店より少し早くに着いてしまったのですが開店より少し早めに店内に入れていただきました。
+       店内に入った後もわざわざ暖房の効いた席に案内していただいたり、かき氷の食べ方やおすすめについて
+       も丁寧に説明していただき、とても親切な接客だったと印象に残りました。<br>
+       注文から数分後、注文が届きました。今回は阿佐美冷蔵秘伝の「蔵元秘伝みつ」をかけていただきました。
+       普段お祭りで食べるようなかき氷よりもずっと氷がふわふわしていて、蜜もちょうど良い甘さでサクサク食べ進めることができ、これを食べれただけでも
+       秩父に来て良かったと思えるほど。それに加え、食後は無料で足湯に入ることができ、かき氷で冷えた体を温めることができるサービスもついています。
+       冬に訪れたのでかき氷は体が冷えてしまうと考えていましたが、結果としては大満足の体験ができました！
+    </p> 
+
+    <div class="kansou">
+        <img src="asamitennai.jpeg" alt="店内">
+        <img src="asiyu.jpeg" alt="足湯">
+    </div>
 
     <h2 id="jumpm">６.まとめ</h2>
     <h3 id="jump6.1"><p>（１）要点・注意点</h3></p>
