--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
     <p><h3>実際に行ってみた感想</h3></p>
     <p>
        えいすけには19時頃に行かせていただきました。<br>
-       このお店の特徴は夫婦２人で運営しているということです。そのため、お店では出来立ての手作りのをいただくことができ、お店と地域住民の温かいやりとりをみることができます。しかし、２人で営んでいる分提供スピードは
-       あまり早くなく、今回は提供まで一時間ほどかかりました。ですので、待つことが苦手の方には向いていないかもしれません。ですが、その分味は絶品となっています。<br>
+       このお店の特徴は夫婦２人で運営しているということです。そのため、お店では出来立ての手作りのをいただくことができ、お店と地域住民の温かいやりとりをみることができます。しかし、２人で営んでいる分提供スピードはあまり早くなく、今回は提供まで一時間ほどかかりました。ですので、待つことが苦手の方には向いていないかもしれません。ですが、その分味は絶品となっています。<br>
        ビーフカツレツ定食はとてもまろやかで柔らかく、箸で挟んだだけでもちぎれてしまいそうなほどです。あまり脂っこくなく、口当たりはステーキに似たものを感じました。ビーフカツレツ定食は2000円ほどで少し高めな値段ですがそれに見合った、とても美味しい料理でした。ビーフカツレツ定食の他に安めのメニューもあり、そちらもクオリティーが高いので高いと感じる方もぜひ足を運んでみてください。
     </p>
 
@@ -261,15 +260,10 @@
     <p><h3>実際に行ってみた感想</h3></p>
     <p>
        大味には18時頃に行かせていただきました。<br>
-       前述した通りこのお店は量が多いことが売りとなっています。そのため、お店ではタッパーを持参して残りをお持ち帰りすることができるようになっています。そのため今回は私たちもタッパーを持参し、店舗に赴きました。
-       今回は海老チャーハンとエビチリを注文したのですが、あまりの大きさに驚いてしまいました。曰く、このチャーハンはコンビニのおにぎり7～8個分らしく、取り皿で分けつつ食べるもののようですが
-        私たちは一人一皿で頼んでしまいました。それに加えてワカメのスープもセットでついてくるのでとてもボリュームがあり
-        ました。しかし、量だけではなく、味もとてもクオリティーの高いものでした。
-        チャーハンはパラパラで脂っこくないのでサクサク食べ進めることができ、海老はとてもプリプリでかつ、どっさりと
-        のっているので満足するまで食事を堪能することができました。<br>
-        結局一部タッパーで持ち帰ることとなってしまいましたが2日目でも味は落ちることなく、とても美味しかったです。
-        ですがやはり、量が多いので胃袋の自信がない方はタッパーを持参するか半チャーハンなどにして量を減らす
-        ことをおすすめします。
+       前述した通りこのお店は量が多いことが売りとなっています。そのため、お店ではタッパーを持参して残りをお持ち帰りすることができるようになっています。そのため今回は私たちもタッパーを持参し、店舗に赴きました。<br>
+       今回は海老チャーハンとエビチリを注文したのですが、あまりの大きさに驚いてしまいました。曰く、このチャーハンはコンビニのおにぎり7～8個分らしく、取り皿で分けつつ食べるもののようですが私たちは一人一皿で頼んでしまいました。それに加えてワカメのスープもセットでついてくるのでとてもボリュームがありました。<br>
+       しかし、量だけではなく、味もとてもクオリティーの高いものでした。チャーハンはパラパラで脂っこくないのでサクサク食べ進めることができ、海老はとてもプリプリでかつ、どっさりとのっているので満足するまで食事を堪能することができました。<br>
+       結局一部タッパーで持ち帰ることとなってしまいましたが2日目でも味は落ちることなく、とても美味しかったです。ですがやはり、量が多いので胃袋の自信がない方はタッパーを持参するか半チャーハンなどにして量を減らすことをおすすめします。
     </p>
 
     <div class="kansou">
@@ -358,13 +352,9 @@
     <p><h3>実際に行ってみた感想</h3></p>
     <p>
        開店時間である10:00を目安に伺いました。<br>
-       電車の都合もあり、開店より少し早くに着いてしまったのですが開店より少し早めに店内に入れていただきました。
-       店内に入った後もわざわざ暖房の効いた席に案内していただいたり、かき氷の食べ方やおすすめについて
-       も丁寧に説明していただき、とても親切な接客だったと印象に残りました。<br>
-       注文から数分後、注文が届きました。今回は阿佐美冷蔵秘伝の「蔵元秘伝みつ」をかけていただきました。
-       普段お祭りで食べるようなかき氷よりもずっと氷がふわふわしていて、蜜もちょうど良い甘さでサクサク食べ進めることができ、これを食べれただけでも
-       秩父に来て良かったと思えるほど。それに加え、食後は無料で足湯に入ることができ、かき氷で冷えた体を温めることができるサービスもついています。
-       冬に訪れたのでかき氷は体が冷えてしまうと考えていましたが、結果としては大満足の体験ができました！
+       電車の都合もあり、開店より少し早くに着いてしまったのですが開店より少し早めに店内に入れていただきました。店内に入った後もわざわざ暖房の効いた席に案内していただいたり、かき氷の食べ方やおすすめについても丁寧に説明していただき、とても親切な接客だったと印象に残りました。<br>
+       注文から数分後、注文が届きました。今回は阿佐美冷蔵秘伝の「蔵元秘伝みつ」をかけていただきました。普段お祭りで食べるようなかき氷よりもずっと氷がふわふわしていて、蜜もちょうど良い甘さでサクサク食べ進めることができ、これを食べれただけでも秩父に来て良かったと思えるほど。<br>
+       それに加え、食後は無料で足湯に入ることができ、かき氷で冷えた体を温めることができるサービスもついています。冬に訪れたのでかき氷は体が冷えてしまうと考えていましたが、結果としては大満足の体験ができました！
     </p> 
 
     <div class="kansou">
