--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <h2 id="jump2">２.洋食</h2>
     <h3 id="jump2.1"><p>（１）<a href="https://tabelog.com/saitama/A1103/A110304/11018519/">Cafeレストラン ホット・ベリー 朝産み卵のオムライス</h3></a></p>
     <p>アメリカンカントリーを思わせる店内で、BGMはビートルズを中心に70~80年代の曲が流れています。<br>
-       このお店のおすすめ料理は朝産み卵のオムライスです。狭山の養鶏場から毎朝産みたてを仕入れており、味の濃い有精卵をたっぷり３つ使ったオムライスになっています。<br>
+       このお店のおすすめ料理は「朝産み卵のオムライス」です。狭山の養鶏場から毎朝産みたてを仕入れており、味の濃い有精卵をたっぷり３つ使ったオムライスになっています。<br>
        食後はコーヒーを楽しんでもらいたいと、コーヒーの味にもこだわっているそうです。ランチやティータイムにぜひ行ってみてください。
     </p>
     <div class="slider">
@@ -244,7 +244,7 @@
     <div class="slider">
         <img src="ebicha.jpeg" alt="">
         <img src="ebihikaku.jpeg" alt="">
-        <img src="ebicha.jpeg" alt="">
+        <img src="tensindon.jpeg" alt="">
         <img src="taimisoto.jpg" alt="">
     </div>
     <div class="map-container">
