--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>埼玉グルメマップ</title>
+    <title>埼玉グルメサイト</title>
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -24,7 +24,8 @@
 </head>
 <body>
     <div style="text-align: center">
-    <h1>埼玉県グルメマップ</h1></div>
+        <h1>埼玉県グルメサイト</h1>
+    </div>
     <header>
         <div class="scroll-infinity">
             <div class="scroll-infinity__wrap">
@@ -60,7 +61,7 @@
         </div>
         <div class="tocs1">
             <ul>
-                <a style="font-size: 2.5em;">埼玉のおすすめグルメ１０選</a>
+                <a style="font-size: 2.0em;">埼玉のおすすめグルメ１０選</a>
                 <li><a style="font-size: 1.8em;" href="#jump1">１.和食</a></li>
             <ul>
                 <li><a style="font-size: 1.3em;" href="#jump1.1">久良一 こうのす川幅うどん <a></li>
