--- a/index.html
+++ b/index.html
@@ -140,6 +140,14 @@
             referrerpolicy="no-referrer-when-downgrade">
         </iframe>
     </div>
+
+    <p><h3>実際に行ってみた感想</h3></p>
+    <p>
+        秩父わらじかつ亭には12時ごろにお伺いしました<br>
+        前述した通り、このお店は「祭りの湯」という温泉施設内のフードコートに併設されています。発券機で食券を購入することでき、カツの枚数やカツカレーにするかどうかなども選ぶことができます。また、漬物や味噌汁もセットでついてきます<br>
+        今回はスタンダードなわらじかつ丼を注文しました。普通のカツ丼よりもずっとインパクトがあり、衣もサクサクでジューシーなので最後まで飽きずに食べ続けることができました。フードコートにはわらじかつ丼だけでなく、秩父名物の味噌ポテトや炙り豚味噌丼など様々なグルメを楽しむことができるのでこちらもおすすめとなっています。<br>
+        わらじかつを提供しているお店は秩父のあらゆる場所にあるのでぜひ、自分にあった味を見つけてください。
+    </p>
  
     <h2 id="jump2">２.洋食</h2>
     <h3 id="jump2.1"><p>（１）<a href="https://tabelog.com/saitama/A1103/A110304/11018519/">Cafeレストラン ホット・ベリー 朝産み卵のオムライス</h3></a></p>
