--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
         今回はスタンダードなわらじかつ丼を注文しました。普通のカツ丼よりもずっとインパクトがあり、衣もサクサクでジューシーなので最後まで飽きずに食べ続けることができました。フードコートにはわらじかつ丼だけでなく、秩父名物の味噌ポテトや炙り豚味噌丼など様々なグルメを楽しむことができるのでこちらもおすすめとなっています。<br>
         わらじかつを提供しているお店は秩父のあらゆる場所にあるのでぜひ、自分にあった味を見つけてください。
     </p>
+
+    <div class="kansou">
+        <img src="warazi.jpeg" alt="メニュー">
+    </div>
  
     <h2 id="jump2">２.洋食</h2>
     <h3 id="jump2.1"><p>（１）<a href="https://tabelog.com/saitama/A1103/A110304/11018519/">Cafeレストラン ホット・ベリー 朝産み卵のオムライス</h3></a></p>
