--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </p>
  
     <div class="kansou">
-        <img src="warazi.jpeg" alt="メニュー">
+        <img src="warazimenu.jpeg" alt="メニュー">
     </div>
 
     <h2 id="jump2">２.洋食</h2>
