--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
         <div class="scroll-infinity">
             <div class="scroll-infinity__wrap">
                 <ul class="scroll-infinity__list scroll-infinity__list--left">
-                  <li class="scroll-infinity__item"><img src="soka.jpg" /></li>                        
-                  <li class="scroll-infinity__item"><img src="yamayama.jpeg" /></li>
-                  <li class="scroll-infinity__item"><img src="kawagoe.webp" /></li>
-                  <li class="scroll-infinity__item"><img src="laketown.webp" /></li>
+                  <a href="https://www.city.soka.saitama.jp/cont/s1002/010/020/030/010/21.html"><li class="scroll-infinity__item"><img src="soka.jpg" /></li></a>                  
+                  <a href="https://hodosan-ropeway.co.jp/"><li class="scroll-infinity__item"><img src="yamayama.jpeg" /></li></a>
+                  <a href="https://www.city.kawagoe.saitama.jp/"><li class="scroll-infinity__item"><img src="kawagoe.webp" /></li></a>
+                  <a href="https://www.aeon-laketown.jp/"><li class="scroll-infinity__item"><img src="laketown.webp" /></li></a>
                 </ul>
                 <ul class="scroll-infinity__list scroll-infinity__list--left">
-                  <li class="scroll-infinity__item"><img src="titibu.jpg" /></li>                        
-                  <li class="scroll-infinity__item"><img src="tamaari.jpg" /></li>
-                  <li class="scroll-infinity__item"><img src="urawa.webp" /></li>
-                  <li class="scroll-infinity__item"><img src="kasukabe.jpg" /></li>
+                  <a href="https://navi.city.chichibu.lg.jp/p_flower/1808/"><li class="scroll-infinity__item"><img src="titibu.jpg" /></li></a>                        
+                  <a href="https://www.saitama-arena.co.jp/"><li class="scroll-infinity__item"><img src="tamaari.jpg" /></li></a>
+                  <a href="https://www.jalan.net/kankou/sta_990102/"><li class="scroll-infinity__item"><img src="urawa.webp" /></li></a>
+                  <a href="http://visit-kasukabe.jp/"><li class="scroll-infinity__item"><img src="kasukabe.jpg" /></li></a>
                 </ul>
             </div>
         </div>
@@ -95,7 +95,7 @@
                 <li><a style="font-size: 1.8em;" href="#jump1">１.和食</a></li>
             <ul>
                 <li><a style="font-size: 1.3em;" href="#jump1.1">久良一 こうのす川幅うどん <a></li>
-                <li><a style="font-size: 1.3em;" href="#jump1.2">わらじカツ丼<a></li>
+                <li><a style="font-size: 1.3em;" href="#jump1.2">秩父わらじかつ亭<a></li>
             </ul>
               <li><a style="font-size: 1.8em;" href="#jump2">２.洋食</a></li>
             <ul>
@@ -179,7 +179,7 @@
     </p>
  
     <div class="kansou">
-        <img src="warazimenu.jpeg" alt="メニュー">
+        <img src="warazi.jpeg" alt="メニュー">
     </div>
 
     <h2 id="jump2">２.洋食</h2>
