--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
         <div class="scroll-infinity">
             <div class="scroll-infinity__wrap">
                 <ul class="scroll-infinity__list scroll-infinity__list--left">
-                  <a href="https://www.city.soka.saitama.jp/cont/s1002/010/020/030/010/21.html"><li class="scroll-infinity__item"><img src="soka.jpg" /></li></a>                  
-                  <a href="https://hodosan-ropeway.co.jp/"><li class="scroll-infinity__item"><img src="yamayama.jpeg" /></li></a>
-                  <a href="https://www.city.kawagoe.saitama.jp/"><li class="scroll-infinity__item"><img src="kawagoe.webp" /></li></a>
-                  <a href="https://www.aeon-laketown.jp/"><li class="scroll-infinity__item"><img src="laketown.webp" /></li></a>
+                  <li class="scroll-infinity__item"><a href="https://www.city.soka.saitama.jp/cont/s1002/010/020/030/010/21.html"><img src="soka.jpg" /></a></li>               
+                  <li class="scroll-infinity__item"><a href="https://hodosan-ropeway.co.jp/"><img src="yamayama.jpeg" /></a></li>
+                  <li class="scroll-infinity__item"><a href="https://www.city.kawagoe.saitama.jp/"><img src="kawagoe.webp" /></a></li>
+                  <li class="scroll-infinity__item"><a href="https://www.aeon-laketown.jp/"></a><img src="laketown.webp" /></a></li>
                 </ul>
                 <ul class="scroll-infinity__list scroll-infinity__list--left">
-                  <a href="https://navi.city.chichibu.lg.jp/p_flower/1808/"><li class="scroll-infinity__item"><img src="titibu.jpg" /></li></a>                        
-                  <a href="https://www.saitama-arena.co.jp/"><li class="scroll-infinity__item"><img src="tamaari.jpg" /></li></a>
-                  <a href="https://www.jalan.net/kankou/sta_990102/"><li class="scroll-infinity__item"><img src="urawa.webp" /></li></a>
-                  <a href="http://visit-kasukabe.jp/"><li class="scroll-infinity__item"><img src="kasukabe.jpg" /></li></a>
+                  <li class="scroll-infinity__item"><a href="https://navi.city.chichibu.lg.jp/p_flower/1808/"></a><img src="titibu.jpg" /></a></li>                     
+                  <li class="scroll-infinity__item"><a href="https://www.saitama-arena.co.jp/"></a><img src="tamaari.jpg" /></a></li>
+                  <li class="scroll-infinity__item"><a href="https://www.jalan.net/kankou/sta_990102/"></a><img src="urawa.webp" /></a></li>
+                  <li class="scroll-infinity__item"><a href="http://visit-kasukabe.jp/"></a><img src="kasukabe.jpg" /></a></li>
                 </ul>
             </div>
         </div>
