--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </p>
  
     <div class="kansou">
-        <img src="warazimenu.jpeg" alt="メニュー">
+        <img src="warazi.jpeg" alt="メニュー">
     </div>
 
     <h2 id="jump2">２.洋食</h2>
@@ -415,5 +415,66 @@
        この経験から、直接足を運ぶことの大切さを学ぶと同時に自分たちはまだまだ埼玉県について知らないんだということを思い知らされました。<br>
        今回は埼玉のグルメについての紹介でしたが今度は観光スポットやお土産についてのサイトも作成していきたいです。
     </p>
+    <h1>他のグルメを知りたい方はこちら</h1>
+<form id="search-form">
+  <input type="text" id="keyword" placeholder="ラーメン, 焼き肉など">
+  <button type="submit">検索</button>
+</form>
+<div id="results"></div>
+Powered by <a href="https://webservice.recruit.co.jp/">ホットペッパーグルメ Webサービス</a>
+
+<script>
+  const API_KEY = "c857f8f80790a31c"; // 定数
+  const API_URL = "https://webservice.recruit.co.jp/hotpepper/gourmet/v1/"; // HTTPSに変更
+  
+  document.getElementById("search-form").addEventListener("submit", async (event) => {
+    console.log("検索ボタンが押されました");
+    event.preventDefault(); // フォーム送信をキャンセル
+
+    const keyword = document.getElementById("keyword").value;
+    document.getElementById("results").innerHTML = "検索中...";
+
+    // CORS回避用のプロキシURL（HTTPSに変更）
+    const proxyUrl = "https://api.allorigins.win/raw?url=";
+    const url = `${proxyUrl}${encodeURIComponent(`${API_URL}?key=${API_KEY}&format=json&keyword=${encodeURIComponent(keyword)}&count=30`)}`;
+
+    try {
+      const response = await fetch(url);
+      if (!response.ok) {
+        throw new Error(`HTTPエラー: ${response.status}`);
+      }
+      const data = await response.json();
+      console.log(data); // レスポンスをコンソールで確認
+      displayResults(data.results.shop); // データを表示する関数
+    } catch (error) {
+      document.getElementById("results").innerHTML = "データ取得に失敗しました。";
+    }
+  });
+
+  function displayResults(shops) {
+    const resultsDiv = document.getElementById("results");
+    resultsDiv.innerHTML = "";
+
+    // 埼玉県で始まる住所の店舗のみをフィルタリング
+    const filteredShops = shops.filter(shop => shop.address.startsWith("埼玉県"));
+
+    if (filteredShops.length > 0) {
+      filteredShops.forEach(shop => {
+        const shopDiv = document.createElement("div");
+        shopDiv.innerHTML = `
+          <h2>${shop.name}</h2>
+          <p>住所: ${shop.address}</p>
+          <p><a href="${shop.urls.pc}" target="_blank">店舗情報を見る</a></p>
+          <img src="${shop.photo.pc.l}" alt="${shop.name}">
+          <hr>
+        `;
+        resultsDiv.appendChild(shopDiv);
+      });
+    } else {
+      resultsDiv.innerHTML = "埼玉県内で該当する店舗がありませんでした。";
+    }
+  }
+</script>
+   
 </body>
 </html>
