--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
         <img src="norikatu.jpg" alt="">
         <img src="warajikatsutei.jpeg" alt="">
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="map-container">
         <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3228.2229492800907!2d139.0810034752648!3d35.99041871292845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601ecbd4efe4e3ff%3A0x7f29a2d0ae4f1cf1!2z56ep54i244KP44KJ44GY44GL44Gk5Lqt!5e0!3m2!1sja!2sjp!4v1737269903112!5m2!1sja!2sjp" 
@@ -170,9 +175,9 @@
 
     <p><h3>実際に行ってみた感想</h3></p>
     <p>
-        秩父わらじかつ亭には12時ごろにお伺いしました<br>
-        前述した通り、このお店は「祭りの湯」という温泉施設内のフードコートに併設されています。発券機で食券を購入することでき、カツの枚数やカツカレーにするかどうかなども選ぶことができます。また、漬物や味噌汁もセットでついてきます<br>
-        今回はスタンダードなわらじかつ丼を注文しました。普通のカツ丼よりもずっとインパクトがあり、衣もサクサクでジューシーなので最後まで飽きずに食べ続けることができました。フードコートにはわらじかつ丼だけでなく、秩父名物の味噌ポテトや炙り豚味噌丼など様々なグルメを楽しむことができるのでこちらもおすすめとなっています。<br>
+        秩父わらじかつ亭には12時ごろにお伺いしました。<br>
+        前述した通り、このお店は「祭りの湯」という温泉施設内のフードコートに併設されています。発券機で食券を購入することでき、カツの枚数やカツカレーにするかどうかなども選ぶことができます。また、漬物や味噌汁もセットでついてきます。<br>
+        今回はスタンダードなわらじかつ丼を注文しました。普通のカツ丼よりもずっとインパクトがあり、衣もサクサクでジューシーなので最後まで飽きずに食べ続けることができました。フードコートではわらじかつ丼だけでなく、秩父名物の味噌ポテトや炙り豚味噌丼など様々なグルメを楽しむことができるのでこちらもおすすめとなっています。<br>
         わらじかつを提供しているお店は秩父のあらゆる場所にあるのでぜひ、自分にあった味を見つけてください。
     </p>
  
@@ -195,6 +200,7 @@
         <img src="tatemono.jpg" alt="">
         <img src="omunaka.jpg" alt="">
     </div>
+
     <div class="map-container">
         <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3228.978654767983!2d139.39251794072464!3d35.971947314063165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018d67768660e89%3A0xef33bd6948352c2c!2z44Kr44OV44Kn44Os44K544OI44Op44OzIOODm-ODg-ODiOODu-ODmeODquODvA!5e0!3m2!1sja!2sjp!4v1733366626783!5m2!1sja!2sjp" 
@@ -229,7 +235,7 @@
     <p><h3>実際に行ってみた感想</h3></p>
     <p>
        えいすけには19時頃に行かせていただきました。<br>
-       このお店の特徴は夫婦２人で運営しているということです。そのため、お店では出来立ての手作りのをいただくことができ、お店と地域住民の温かいやりとりをみることができます。しかし、２人で営んでいる分提供スピードはあまり早くなく、今回は提供まで一時間ほどかかりました。ですので、待つことが苦手の方には向いていないかもしれません。ですが、その分味は絶品となっています。<br>
+       このお店の特徴は夫婦２人で運営しているところです。そのため、お店では出来立ての手作りをいただくことができ、お店と地域住民の温かいやりとりをみることができます。しかし、２人で営んでいる分提供スピードはあまり早くなく、今回は提供まで一時間ほどかかりました。ですので、待つことが苦手な方には向いていないかもしれません。ですが、その分味は絶品となっています。<br>
        ビーフカツレツ定食はとてもまろやかで柔らかく、箸で挟んだだけでもちぎれてしまいそうなほどです。あまり脂っこくなく、口当たりはステーキに似たものを感じました。ビーフカツレツ定食は2000円ほどで少し高めな値段ですがそれに見合った、とても美味しい料理でした。ビーフカツレツ定食の他に安めのメニューもあり、そちらもクオリティーが高いので高いと感じる方もぜひ足を運んでみてください。
     </p>
 
@@ -406,7 +412,7 @@
     <p>
        開店時間である10:00を目安に伺いました。<br>
        電車の都合もあり、開店より少し早くに着いてしまったのですが開店より少し早めに店内に入れていただきました。店内に入った後もわざわざ暖房の効いた席に案内していただいたり、かき氷の食べ方やおすすめについても丁寧に説明していただき、とても親切な接客だったと印象に残りました。<br>
-       注文から数分後、注文が届きました。今回は阿佐美冷蔵秘伝の「蔵元秘伝みつ」をかけていただきました。普段お祭りで食べるようなかき氷よりもずっと氷がふわふわしていて、蜜もちょうど良い甘さでサクサク食べ進めることができ、これを食べれただけでも秩父に来て良かったと思えるほど。<br>
+       注文から数分後、注文が届きました。今回は阿佐美冷蔵秘伝の「蔵元秘伝みつ」をかけていただきました。普段お祭りで食べるようなかき氷よりもずっと氷がふわふわしていて、蜜もちょうど良い甘さでサクサク食べ進めることができ、これを食べれただけでも秩父に来て良かったと思えるほどです。<br>
        それに加え、食後は無料で足湯に入ることができ、かき氷で冷えた体を温めることができるサービスもついています。冬に訪れたのでかき氷は体が冷えてしまうと考えていましたが、結果としては大満足の体験ができました！
     </p> 
 
